21-production-alb-ingress/manifests/admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: admin-app

  template:
    metadata:
      labels:
        app: admin-app

    spec:
      containers:
      - name: admin-app
        image: nginx

        ports:
        - containerPort: 80
