21-production-alb-ingress/manifests/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: api-app

  template:
    metadata:
      labels:
        app: api-app

    spec:
      containers:
      - name: api-app
        image: nginx

        ports:
        - containerPort: 80
