21-production-alb-ingress/manifests/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service

spec:
  selector:
    app: api-app

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
