21-production-alb-ingress/manifests/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-service

spec:
  selector:
    app: dashboard-app

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
